# memlay

./: AGENTS.md  Cargo.toml  Dockerfile  README.md  TODO.md  config.toml  config.yaml
.github/workflows/: docker.yml
.opencode/plans/: memlay-relay.md
benches/: README.md  cache_comparison_bench.rs  concurrent_map_bench.rs  index_storage_bench.rs  ingest_bench.rs  pipeline_bench.rs  relay_bench.rs  store_bench.rs  subscription_cache_bench.rs
src/: config.rs  event.rs  index.html  lib.rs  main.rs  message.rs  metrics.rs  relay.rs  subscription.rs
src/store/: index.rs  lru.rs  mod.rs  wal.rs
tests/: deadlock_test.rs  e2e_test.rs  load_test_concurrent.rs  load_test_extensive.rs  slow_reader_stress.rs  test_wal_load.rs
