[package]
name = "memlay"
version = "0.1.0"
edition = "2024"

[lib]
name = "memlay"
path = "src/lib.rs"

[[bin]]
name = "memlay"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Data structures
bytes = "1"
parking_lot = "0.12"

# Concurrency
crossbeam-channel = "0.5"
num_cpus = "1.16"

# Utils
thiserror = "2"
tracing = "0.1"
hex = "0.4"

# Web server
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
nostr-archive-cursor = { version = "0.5", features = ["sync"] }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "store_bench"
harness = false

[[bench]]
name = "relay_bench"
harness = false
