[package]
name = "memlay"
version = "0.2.0"
edition = "2024"

[features]
unchecked = []

[lib]
name = "memlay"
path = "src/lib.rs"

[[bin]]
name = "memlay"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Data structures
bytes = "1"
parking_lot = "0.12"
dashmap = "6"

# Concurrency
crossbeam-channel = "0.5"
num_cpus = "1.16"

# Utils
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
config = "0.14"
anyhow = "1"
hex = "0.4"
secp256k1 = { version = "0.29", features = ["global-context"] }
sha2 = "0.10"
rlimit = "0.10"

# Web server
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
sysinfo = "0.38.4"

# Metrics
prometheus = "0.13"
reqwest = { version = "0.12", features = ["json"] }
lazy_static = "1.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
nostr-archive-cursor = { version = "0.5", features = ["sync"] }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
nostr-sdk = "0.44"
tungstenite = "0.26"
tempfile = "3"

[[bench]]
name = "store_bench"
harness = false

[[bench]]
name = "relay_bench"
harness = false

[[bench]]
name = "ingest_bench"
harness = false

[[bench]]
name = "pipeline_bench"
harness = false

[[bench]]
name = "subscription_cache_bench"
harness = false
required-features = ["unchecked"]

[[bench]]
name = "index_storage_bench"
harness = false

[[bench]]
name = "concurrent_map_bench"
harness = false
